2006-12-01 Kimmo
 PATCH: [ 1605562 ] Manual: Add FAQ items about archive support installation
  Manual: Faq.xml

2006-11-30 Tim
 PATCH: [ 1605673 ] Manual: Minimal changes in Filters.xml
  Manual: Filters.xml

2006-11-29 Tim
 PATCH: [ 1604059 ] Manual: Add missing options to Configuration.xml
  Manual: Configuration.xml

2006-11-27 Kimmo
 PATCH: [ 1603359 ] Manual: FAQ updates
  Manual: Faq.xml
 PATCH: [ 1603385 ] Manual: fix filter file path, clarify template file usage
  Manual: Filters.xml
 PATCH: [ 1603393 ] Improve project file documentation
  Manual: Open_paths.xml
  Manual/screenshots new file: projfile_save.png

2006-11-26 Kimmo
 PATCH: [ 1602658 ] Manual: note about some 7-zip MSI installers missing file
  Manual: Install.xml

2006-11-26 Tim
 PATCH: [ 1602517 ] Manual: Remove "10.3.2. Apply to unrecognized side"
  Manual: Configuration.xml

2006-11-23 Kimmo
 PATCH: [ 1601440 ] Manual: improve command line options chapter
  Manual: Command_line.xml
 Update WinMerge version number and manual revision number (1.3.0) for trunk
  Manual: WinMerge_help.xml

2006-11-22 Kimmo
 PATCH: [ 1600651 ] Manual: clarify folder filter rules about starting mark
  Manual: Filters.xml
 PATCH: [ 1600658 ] Manual: Add minimize commandline parameter
  Manual: Command_line.xml

2006-11-21 Tim
 PATCH: [ 1398013 ] Add availability of binary viewing/merging to FAQ
  Manual: Faq.xml
 Move "filecomp1.png" screenshot after the first paragraph. This looks better and more consistent.
  Manual: Compare_files.xml

2006-11-20 Tim
 PATCH: [ 1599401 ] Manual: Use bold text for questions (FAQ)
  Manual/css: all.css help.css print.css

2006-11-07 Tim
 PATCH: [ 1592234 ] Manual: Nicer Shortcut keys tables
  Manual: Shortcut_keys.xml
  Manual/css: all.css help.css print.css

2006-11-06 Tim
 PATCH: [ 1586878 ] Manual: Replace "aborted.png" with transpatent GIF version
  Manual: Compare_dirs.xml
  Manual/screenshots: binary.gif folderup.gif folderup_disable.gif